--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
         <section>
-            <section class="container my-5">
+            <section>
                 <h2 class="titulo-seccion">Ramos</h2>
                 <div class="row g-4">
                     <div class="col-12 col-md-6">
