--- a/html/estructura.html
+++ b/html/estructura.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../sass/estilo.css">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
                         <div class="contenido-org">
                             <p>Encargados de la estrategia de ventas y posicionamiento.</p>
 
-                            <h1>AREAS</h1>
+                            <h4>AREAS</h4>
                             <ul>
                                 <li>Marketing: Desarrollo de imagen de marca, publicidad y redes sociales.</li>
 
@@ -66,7 +66,7 @@
                         <div class="contenido-org">
                             <p>Análisis de denuncias y liquidación de pagos.</p>
 
-                            <h1>AREAS</h1>
+                            <h4>AREAS</h4>
                             <ul>
                                 <li>Incendio:Peritajes técnicos y evaluación de daños estructurales por fuego.
                                 </li>
@@ -84,7 +84,7 @@
                         <div class="contenido-org">
                             <p>Soporte económico y administrativo de la empresa.</p>
 
-                            <h1>AREAS</h1>
+                            <h4>AREAS</h4>
                             <ul>
                                 <li>Contabilidad: Registro de balances, libros obligatorios y auditoría interna.
                                 </li>
